force-app/main/default/objects/Radar_Page__c/Radar_Page__c.object-meta.xml
<CustomObject>
    <label>Radar Page</label>
    <nameField>
        <label>Radar Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Radar Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>