force-app/main/default/objects/Radar_Page__c/fields/Radar_Page_Group__c.field-meta.xml
<CustomField>
    <fullName>Radar_Page_Group__c</fullName>
    <label>Radar Page Group</label>
    <referenceTo>Page_Group__c</referenceTo>
    <relationshipLabel>Radar Pages</relationshipLabel>
    <relationshipName>Radar_Pages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>