force-app/main/default/objects/Radar_Page__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <label>Slug</label>
    <type>TextArea</type>
</CustomField>