force-app/main/default/objects/Radar_Page__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>Radar_Page_Group__c</columns>
    <columns>Slug__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>